--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,6 +1,6 @@
-FROM adoptopenjdk:11-jre-hotspot-focal
+FROM eclipse-temurin:11-jre-focal
 
-ENV TRACCAR_VERSION 5.4
+ENV TRACCAR_VERSION 5.5
 
 WORKDIR /opt/traccar
 
